Fix text spacing

--- a/src/components/NewsBanner/NewsBanner.module.scss
+++ b/src/components/NewsBanner/NewsBanner.module.scss
@@ -21,4 +21,5 @@
   fill: var(--jungle-green);
   display: flex;
   align-items: center;
+  margin-left: 9px;
 }
